perf: preload fonts to avoid layout shift

--- a/wp-content/themes/somoscuatro/assets/styles/global/_fonts.css
+++ b/wp-content/themes/somoscuatro/assets/styles/global/_fonts.css
@@ -1,7 +1,7 @@
 @supports (font-variation-settings: normal) {
 
 	@font-face {
-		font-family: Jost;
+		font-family: Jost, "Helvetica Neue", Arial, sans-serif;
 		font-style: normal;
 		font-weight: 300 700;
 		font-display: swap;
@@ -12,7 +12,7 @@
 @supports (font-variation-settings: normal) {
 
 	@font-face {
-		font-family: Syne;
+		font-family: Syne, "Helvetica Neue", Arial, sans-serif;
 		font-style: normal;
 		font-weight: 400 700;
 		font-display: swap;
